# deepseek-mcp

./: .gitignore  .mcp.json.example  CHANGELOG_v0.5.md  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  README.md  WORKLOAD_v0.5.md  deepseek_mcp_server.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
docs/: benchmark.md  gotchas.md
examples/: advise_architecture.md  advise_tradeoff.md  classify_files_prompt.txt  flash_classify.md
src/deepseek_mcp/: __init__.py  __main__.py  server.py
tests/: test_protocol.py
